// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`postcss-plugin Does not change unexpectedly - Dev: config 1`] = `
{
  "css": {
    "devSourcemap": true,
    "modules": {
      "generateScopedName": "§Ⓜ[name]__[local]__[contenthash:base52:2]",
      "localsConvention": "camelCase",
    },
    "postcss": {
      "map": true,
      "parser": {
        "default": {
          "parse": [Function],
          "stringify": [Function],
        },
        "parse": [Function],
        "stringify": [Function],
      },
      "plugins": [
        {
          "postcssPlugin": "postcss-global-data",
          "prepare": [Function],
        },
        {
          "Once": [Function],
          "postcssPlugin": "postcss-import",
        },
        [Function],
        [Function],
        {
          "plugins": [
            {
              "postcssPlugin": "postcss-normalize-display-values",
              "prepare": [Function],
            },
            {
              "AtRule": [Function],
              "postcssPlugin": "postcss-font-format-keywords",
            },
            {
              "Declaration": [Function],
              "postcssPlugin": "postcss-oklab-function",
            },
            {
              "postcssPlugin": "postcss-text-decoration-shorthand",
              "prepare": [Function],
            },
            {
              "AtRule": [Function],
              "Once": [Function],
              "postcssPlugin": "postcss-custom-media",
            },
            {
              "Rule": [Function],
              "postcssPlugin": "postcss-nesting",
            },
            {
              "Rule": [Function],
              "postcssPlugin": "postcss-dir-pseudo-class",
            },
            {
              "Declaration": [Function],
              "postcssPlugin": "postcss-lab-function",
            },
            {
              "Rule": [Function],
              "postcssPlugin": "css-blank-pseudo",
            },
            {
              "Declaration": [Function],
              "postcssPlugin": "postcss-page-break",
            },
            {
              "Once": [Function],
              "postcssPlugin": "postcss-font-variant",
            },
            {
              "Declaration": [Function],
              "postcssPlugin": "postcss-stepped-value-functions",
            },
            {
              "browsers": [
                "> 1%",
                "last 1 Android versions",
                "last 1 ChromeAndroid versions",
                "last 2 Chrome versions",
                "last 2 Firefox versions",
                "last 2 Safari versions",
                "last 2 iOS versions",
                "last 2 Edge versions",
                "last 2 Opera versions",
              ],
              "info": [Function],
              "options": {
                "overrideBrowserslist": [
                  "> 1%",
                  "last 1 Android versions",
                  "last 1 ChromeAndroid versions",
                  "last 2 Chrome versions",
                  "last 2 Firefox versions",
                  "last 2 Safari versions",
                  "last 2 iOS versions",
                  "last 2 Edge versions",
                  "last 2 Opera versions",
                ],
              },
              "postcssPlugin": "autoprefixer",
              "prepare": [Function],
            },
            {
              "RuleExit": [Function],
              "postcssPlugin": "postcss-progressive-custom-properties",
            },
            {
              "OnceExit": [Function],
              "postcssPlugin": "postcss-preset-env",
            },
          ],
          "postcssPlugin": "postcss-preset-env",
        },
        [Function],
        {
          "OnceExit": [Function],
          "postcssPlugin": "postcss-sort-media-queries",
        },
        {
          "OnceExit": [Function],
          "postcssPlugin": "js-boilerplate/postcss-pretty",
        },
      ],
      "stringifier": undefined,
      "syntax": undefined,
    },
  },
}
`;

exports[`postcss-plugin Does not change unexpectedly - Dev: plugin 1`] = `
{
  "config": [Function],
  "name": "lipemat:postcss-config",
}
`;

exports[`postcss-plugin Does not change unexpectedly - Dist: config 1`] = `
{
  "css": {
    "devSourcemap": false,
    "modules": {
      "generateScopedName": [Function],
      "localsConvention": "camelCase",
    },
    "postcss": {
      "map": false,
      "parser": {
        "default": {
          "parse": [Function],
          "stringify": [Function],
        },
        "parse": [Function],
        "stringify": [Function],
      },
      "plugins": [
        {
          "postcssPlugin": "postcss-global-data",
          "prepare": [Function],
        },
        {
          "Once": [Function],
          "postcssPlugin": "postcss-import",
        },
        [Function],
        [Function],
        {
          "plugins": [
            {
              "postcssPlugin": "postcss-normalize-display-values",
              "prepare": [Function],
            },
            {
              "AtRule": [Function],
              "postcssPlugin": "postcss-font-format-keywords",
            },
            {
              "Declaration": [Function],
              "postcssPlugin": "postcss-oklab-function",
            },
            {
              "postcssPlugin": "postcss-text-decoration-shorthand",
              "prepare": [Function],
            },
            {
              "AtRule": [Function],
              "Once": [Function],
              "postcssPlugin": "postcss-custom-media",
            },
            {
              "Rule": [Function],
              "postcssPlugin": "postcss-nesting",
            },
            {
              "Rule": [Function],
              "postcssPlugin": "postcss-dir-pseudo-class",
            },
            {
              "Declaration": [Function],
              "postcssPlugin": "postcss-lab-function",
            },
            {
              "Rule": [Function],
              "postcssPlugin": "css-blank-pseudo",
            },
            {
              "Declaration": [Function],
              "postcssPlugin": "postcss-page-break",
            },
            {
              "Once": [Function],
              "postcssPlugin": "postcss-font-variant",
            },
            {
              "Declaration": [Function],
              "postcssPlugin": "postcss-stepped-value-functions",
            },
            {
              "browsers": [
                "> 1%",
                "last 1 Android versions",
                "last 1 ChromeAndroid versions",
                "last 2 Chrome versions",
                "last 2 Firefox versions",
                "last 2 Safari versions",
                "last 2 iOS versions",
                "last 2 Edge versions",
                "last 2 Opera versions",
              ],
              "info": [Function],
              "options": {
                "overrideBrowserslist": [
                  "> 1%",
                  "last 1 Android versions",
                  "last 1 ChromeAndroid versions",
                  "last 2 Chrome versions",
                  "last 2 Firefox versions",
                  "last 2 Safari versions",
                  "last 2 iOS versions",
                  "last 2 Edge versions",
                  "last 2 Opera versions",
                ],
              },
              "postcssPlugin": "autoprefixer",
              "prepare": [Function],
            },
            {
              "RuleExit": [Function],
              "postcssPlugin": "postcss-progressive-custom-properties",
            },
            {
              "OnceExit": [Function],
              "postcssPlugin": "postcss-preset-env",
            },
          ],
          "postcssPlugin": "postcss-preset-env",
        },
        [Function],
        {
          "OnceExit": [Function],
          "postcssPlugin": "postcss-sort-media-queries",
        },
        {
          "OnceExit": [Function],
          "postcssPlugin": "clean",
        },
      ],
      "stringifier": undefined,
      "syntax": undefined,
    },
  },
}
`;

exports[`postcss-plugin Does not change unexpectedly - Dist: plugin 1`] = `
{
  "config": [Function],
  "name": "lipemat:postcss-config",
}
`;
